# temankasir

./: README.md  package-lock.json  package.json  tsconfig.json
docs/: tambahProduk.md
src/: tauri.d.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: element.js  global.css  layout.js  loading.js  page.js
src/app/components/: content.js  header.js  inputField.js  isi.js
src/app/module/: getCookies.js  harapan.js  renderAllHarapan.js  setCookies.js
src/app/module/print/: print_elements.js
src/app/print/: page.js
src/app/produk/: page.js
src/app/services/: helper.js
src/store/: useCartSore.js
